<resources>
    <string name="app_name">Schedule Reminder</string>
    <string name="auto_silent_mode">Auto Silent Mode</string>
    <string name="volume_off_image">volume_off_image</string>
    <string name="toggle_text">Use switch to toggle between\ndrop down menu and text field.</string>
    <string name="name">NAME</string>
    <string name="eg_digital_electronics">Eg. Digital Electronics</string>
    <string name="time">TIME</string>
    <string name="done">Done</string>
    <string name="current_time">CURRENT TIME</string>
    <string name="auto_daily_notifications">Auto Daily Notifications</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="no_items_to_display">No items to display.</string>
</resources>
