<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="6dp">

    <LinearLayout

        android:id="@+id/ringer_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/background_light"
        android:elevation="8dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/ringer_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/volume_off_image"
            android:src="@mipmap/volume_on_icon" />

        <Switch
            android:id="@+id/ringer_switch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical"
            android:text="@string/auto_silent_mode"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout

        android:id="@+id/notifications_linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/ringer_linearLayout"
        android:background="@android:color/background_light"
        android:elevation="8dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/notification_imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/volume_off_image"
            android:src="@mipmap/notification_icon" />

        <Switch
            android:id="@+id/notification_switch"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginEnd="10dp"
            android:layout_marginStart="10dp"
            android:gravity="center_vertical"
            android:text="@string/auto_daily_notifications"
            android:textSize="18sp" />

    </LinearLayout>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/weekday_recyclerView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/notifications_linearLayout"
        android:layout_marginTop="12dp" />

</RelativeLayout>
